split data into train validation and test and added function to retreive shapes

--- a/data.ipynb
+++ b/data.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/armughan/anaconda3/envs/py3.6/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -57,18 +66,33 @@
     "        if os.path.exists(X_data_path) and os.path.exists(Y_data_path):\n",
     "            X=np.load(X_data_path)\n",
     "            Y=np.load(Y_data_path)\n",
-    "            self.X_train,self.X_test,self.Y_train,self.Y_test=train_test_split(X,Y,train_size=train_proportion)\n",
+    "            np.random.shuffle(X)\n",
+    "            np.random.shuffle(Y)\n",
+    "            X_temp,self.X_test,Y_temp,self.Y_test=train_test_split(X,Y,train_size=train_proportion)\n",
+    "            self.X_train,self.X_validation,self.Y_train,self.Y_validation=train_test_split(X_temp,Y_temp,train_size=train_proportion)\n",
+    "            train_size=self.X_train.shape[0]\n",
+    "            self.num_batches=int(train_size/self.batch_size)\n",
+    "            X_temp=Y_temp=None\n",
     "            X,Y=None,None\n",
     "        else:\n",
     "            print (\"failed to load data\")\n",
     "    def get_next_batch(self):\n",
-    "        train_size=self.X_train.shape[0]\n",
-    "        num_batches=int(train_size/self.batch_size)\n",
-    "        inds=np.arange(train_size)\n",
+    "        inds=np.arange(self.X_train.shape[0])#shuffling training set for every new epoch\n",
     "        np.random.shuffle(inds)\n",
     "        X_train,Y_train=self.X_train[inds],self.Y_train[inds]\n",
-    "        for i in np.arange(num_batches):\n",
-    "            yield X_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size],Y_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size]"
+    "        for i in np.arange(self.num_batches):\n",
+    "            yield X_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size],Y_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size]\n",
+    "            \n",
+    "    def get_shapes(self):\n",
+    "        return {\n",
+    "            'X_train shape': self.X_train.shape,\n",
+    "            'Y_train shape': self.Y_train.shape,\n",
+    "            'X_validation shape': self.X_validation.shape,\n",
+    "            'Y_validation shape': self.Y_validation.shape,\n",
+    "            'X_test shape': self.X_test.shape,\n",
+    "            'Y_test shape': self.Y_test.shape\n",
+    "        }\n",
+    "    "
    ]
   }
  ],
