added get validation set function

--- a/data.ipynb
+++ b/data.ipynb
@@ -82,7 +82,8 @@
     "        X_train,Y_train=self.X_train[inds],self.Y_train[inds]\n",
     "        for i in np.arange(self.num_batches):\n",
     "            yield X_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size],Y_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size]\n",
-    "            \n",
+    "    def get_validation_set(self):\n",
+    "        return self.X_validation,self.Y_validation\n",
     "    def get_shapes(self):\n",
     "        return {\n",
     "            'X_train shape': self.X_train.shape,\n",
