--- a/data.ipynb
+++ b/data.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/armughan/anaconda3/envs/py3.6/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "C:\\Users\\Armughan.Shahid\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
       "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
      ]
     }
@@ -69,9 +69,13 @@
     "            np.random.shuffle(X)\n",
     "            np.random.shuffle(Y)\n",
     "            X_temp,self.X_test,Y_temp,self.Y_test=train_test_split(X,Y,train_size=train_proportion)\n",
-    "            self.X_train,self.X_validation,self.Y_train,self.Y_validation=train_test_split(X_temp,Y_temp,train_size=train_proportion)\n",
+    "            self.X_train,self.X_validation,self.Y_train,self.Y_validation=train_test_split(X_temp,Y_temp,test_size=200)\n",
     "            train_size=self.X_train.shape[0]\n",
     "            self.num_batches=int(train_size/self.batch_size)\n",
+    "            self.X_train=self.preprocess_data(self.X_train)\n",
+    "            self.X_validation=self.preprocess_data(self.X_validation)\n",
+    "            self.X_test=self.preprocess_data(self.X_test)\n",
+    "            \n",
     "            X_temp=Y_temp=None\n",
     "            X,Y=None,None\n",
     "        else:\n",
@@ -82,8 +86,10 @@
     "        X_train,Y_train=self.X_train[inds],self.Y_train[inds]\n",
     "        for i in np.arange(self.num_batches):\n",
     "            yield X_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size],Y_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size]\n",
+    "    \n",
     "    def get_validation_set(self):\n",
     "        return self.X_validation,self.Y_validation\n",
+    "    \n",
     "    def get_shapes(self):\n",
     "        return {\n",
     "            'X_train shape': self.X_train.shape,\n",
@@ -93,7 +99,11 @@
     "            'X_test shape': self.X_test.shape,\n",
     "            'Y_test shape': self.Y_test.shape\n",
     "        }\n",
-    "    "
+    "    def preprocess_data(self,imgs):\n",
+    "        if not (hasattr(self,\"data_mean\") and hasattr(self,\"data_var\")):\n",
+    "            self.data_mean=np.mean(self.X_train,axis=0,keepdims=True)\n",
+    "            self.data_var=np.var(self.X_train,axis=0,keepdims=True)\n",
+    "        return (imgs-self.data_mean)/(self.data_var+0.00001)"
    ]
   }
  ],
