added funcionality for getting validation set in batches

--- a/data.ipynb
+++ b/data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,10 @@
     "        for i in np.arange(self.num_batches):\n",
     "            yield X_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size],Y_train[(i*self.batch_size):(i*self.batch_size)+self.batch_size]\n",
     "    \n",
-    "    def get_validation_set(self):\n",
-    "        return self.X_validation,self.Y_validation\n",
+    "    def get_validation_set_batch(self):\n",
+    "        num_batches_test=int(self.X_validation.shape[0]/self.batch_size)\n",
+    "        for i in np.arange(num_batches_test):\n",
+    "            yield self.X_validation[(i*self.batch_size):(i*self.batch_size)+self.batch_size],self.Y_validation[(i*self.batch_size):(i*self.batch_size)+self.batch_size]\n",
     "    \n",
     "    def get_shapes(self):\n",
     "        return {\n",
@@ -100,10 +102,11 @@
     "            'Y_test shape': self.Y_test.shape\n",
     "        }\n",
     "    def preprocess_data(self,imgs):\n",
-    "        if not (hasattr(self,\"data_mean\") and hasattr(self,\"data_var\")):\n",
+    "        if not (hasattr(self,\"data_mean\") and hasattr(self,\"data_std\")):\n",
+    "            print(\"calculating mean and std over training set\\n\")\n",
     "            self.data_mean=np.mean(self.X_train,axis=0,keepdims=True)\n",
-    "            self.data_var=np.var(self.X_train,axis=0,keepdims=True)\n",
-    "        return (imgs-self.data_mean)/(self.data_var+0.00001)"
+    "            self.data_std=np.std(self.X_train,axis=0,keepdims=True)\n",
+    "        return (imgs-self.data_mean)/(self.data_std+0.00001)"
    ]
   }
  ],
