--- a/q_network.ipynb
+++ b/q_network.ipynb
@@ -24,13 +24,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class experience_replay_buffer:\n",
+    "    def __init__(self,size,dtype):\n",
+    "        self.buffer=np.empty(size,dtype=dtype)\n",
+    "        self.num_items=0\n",
+    "        self.capacity=size\n",
+    "    def add_experience(self,experience):\n",
+    "        \n",
+    "        if self.num_items<self.capacity:\n",
+    "            self.buffer[self.num_items]=experience\n",
+    "            self.num_items+=1\n",
+    "        else:\n",
+    "            ind=np.random.randint(low=0,high=self.capacity,size=1,dtype=np.int32)\n",
+    "            self.buffer[ind]=experience\n",
+    "    \n",
+    "    def get_batch(self,batch_size):\n",
+    "        inds=np.random.randint(low=0,high=self.capacity,size=batch_size,dtype=np.int32)\n",
+    "        experiences=self.experience_replay_buffer[inds]\n",
+    "        df=pd.DataFrame(experiences, columns=['states', 'actions', 'next_states','rewards'])\n",
+    "        return np.array(df.states),np.array(df.actions),np.array(df.next_states),np.array(df.rewards)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-e011b63b0732>, line 48)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-e011b63b0732>\"\u001b[0;36m, line \u001b[0;32m48\u001b[0m\n\u001b[0;31m    def train()\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "class Q_Network(CNN_Model):\n",
-    "    def __init__(self,param_dict={},restore_params=False,pickle_file_path=\"\"):\n",
+    "    def __init__(self,max_experience_buffer_len=120,param_dict={},restore_params=False,pickle_file_path=\"\"):\n",
     "        CNN_Model.__init__(self,param_dict,restore_params,pickle_file_path)\n",
+    "        self.max_experience_buffer_len=max_experience_buffer_len\n",
+    "        \n",
     "    def form_loss(self,logits,targets):\n",
     "        entropies=self.params.loss_fn(labels=targets,logits=logits)\n",
     "        return entropies\n",
@@ -65,8 +103,44 @@
     "            self.train_op=optimizer.apply_gradients(grads_and_vars=self.grads_and_vars,global_step=self.step_no)\n",
     "            \n",
     "            self.initializer=tf.global_variables_initializer()\n",
+    "        def add_to_experience_replay(self,state,action,next_state,reward):\n",
+    "            experience=tuple(state,action,next_state,reward)\n",
+    "            if not hasattr(\"experience_replay_buffer\"):\n",
+    "                self.experience_replay_buffer=experience_replay_buffer(size=self.max_experience_buffer_len,dtype=type(experience))\n",
+    "            self.experience_replay_buffer.add_experience(experience)\n",
+    "        \n",
+    "       \n",
+    "     \n",
+    "        def train(self,sess,episodes,steps,epsilon,env,save_dir,save_every_n_iter,log_every_n_iter,initialize=False,set_logging=True):\n",
+    "            if initialize:\n",
+    "                sess.run([self.initializer])\n",
+    "            if set_logging:\n",
+    "                log_dir,set_logging=self.create_log_directory_if_doesnt_exist(save_dir)\n",
+    "            if set_logging: #creating file handlers if dir cretaed or found in above statement\n",
+    "                print(\"logging called but no code implemented\")\n",
+    "#                 train_writer = tf.summary.FileWriter(os.path.join(log_dir,'train'), sess.graph)\n",
+    "#                 validation_writer = tf.summary.FileWriter(os.path.join(log_dir ,'validation'))\n",
+    "            [step_no]=sess.run([self.step_no]) \n",
     "            \n",
-    "        def train()\n",
+    "            for episode in np.arange(episodes):\n",
+    "                state=env.reset()\n",
+    "                for step in np.arange(steps):\n",
+    "                    #choosing action \n",
+    "                    action=-1 \n",
+    "                    if (np.random.random(1)<epsilon):\n",
+    "                        action=np.random.randint(low=0,high=self.params.num_outputs,size=1,dtype=np.int32)\n",
+    "                    else:\n",
+    "                        feed_dict={self.X:np.expand_dims(state,axis=0),self.lr_placeholder:self.params.learning_rate,self.training_mode:True}\n",
+    "                        action=sess.run([self.max_q_value_actions_one_hot],feed_dict=feed_dict)\n",
+    "                    next_state,reward,done,info=env.step(action)\n",
+    "                    \n",
+    "                    if done:\n",
+    "                        next_state=None\n",
+    "                        self.add_to_experience_replay(state,action,next_state,reward)\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        self.add_to_experience_replay(state,action,next_state,reward)\n",
+    "                        state=next_state\n",
     "#             "
    ]
   },
