completed training function and made changes to build model

--- a/q_network.ipynb
+++ b/q_network.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/armughan/anaconda3/envs/py3.6/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "C:\\Users\\Armughan.Shahid\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -51,18 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-e011b63b0732>, line 48)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-e011b63b0732>\"\u001b[0;36m, line \u001b[0;32m48\u001b[0m\n\u001b[0;31m    def train()\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Q_Network(CNN_Model):\n",
     "    def __init__(self,max_experience_buffer_len=120,param_dict={},restore_params=False,pickle_file_path=\"\"):\n",
@@ -77,25 +68,30 @@
     "        self.build_model_till_logits()\n",
     "        with tf.variable_scope(self.params.name_scope):\n",
     "            #logits are q values]\n",
-    "            self.max_q_value_actions=tf.argmax(self.logits,axis=1) #value which has the highest q value\n",
-    "            self.max_q_value_actions_one_hot=tf.one_hot(self.max_q_value_actions,depth=self.params.num_outputs)\n",
-    "            self.max_q_values=self.logits*self.max_q_value_actions_one_hot\n",
+    "#             self.max_q_value_actions=tf.argmax(self.logits,axis=1) #value which has the highest q value\n",
+    "#             self.max_q_value_actions_one_hot=tf.one_hot(self.max_q_value_actions,depth=self.params.num_outputs)\n",
+    "#             self.max_q_values=self.logits*self.max_q_value_actions_one_hot\n",
+    "            self.max_q_value_actions=tf.squeeze(tf.argmax(self.logits,axis=1)) #value which has the highest q value\n",
+    "            self.max_q_values=tf.reduce_max(self.logits,axis=1)\n",
     "            \n",
     "#             print (self.max_q_values.shape)\n",
     "            #placeholder for action at current timestep\n",
-    "            self.one_hot_actions=self.form_placeholder((None,self.params.num_outputs),tf.float32) #actions are not one hot\n",
+    "#             self.one_hot_actions=self.form_placeholder((None,self.params.num_outputs),tf.float32) #actions are not one hot\n",
     "#             self.one_hot_actions=tf.one_hot(indices=self.actions,depth=self.params.num_outputs)\n",
+    "#             q_vals=self.logits*self.one_hot_actions\n",
+    "            self.actions=self.form_placeholder((None),tf.int32)\n",
+    "            one_hot_actions=tf.one_hot(indices=self.actions,depth=self.params.num_outputs)\n",
+    "            q_vals=tf.reduce_sum(self.logits*one_hot_actions,axis=1)\n",
     "            \n",
-    "            q_vals=self.logits*self.one_hot_actions\n",
-    "        \n",
     "            \n",
     "            \n",
     "            #placeholder for max next state q values,rewards and discount rate\n",
-    "            self.max_q_values_next_state=self.form_placeholder((None,self.params.num_outputs),tf.float32)\n",
-    "            self.rewards=self.form_placeholder((None,1),tf.float32)\n",
+    "#             self.max_q_values_next_state=self.form_placeholder((None,self.params.num_outputs),tf.float32)\n",
+    "            self.max_q_values_next_state=self.form_placeholder((None),tf.float32)\n",
+    "            self.rewards=self.form_placeholder((None),tf.float32)\n",
     "            self.discount_rate=self.form_placeholder([],tf.float32)\n",
     "            \n",
-    "            self.loss=tf.reduce_mean(tf.square(q_vals-(self.rewards+(self.discount_rate*self.max_q_values))))\n",
+    "            self.loss=tf.reduce_mean(tf.square(q_vals-(self.rewards+(self.discount_rate*self.max_q_values_next_state))))\n",
     "            #computing gradients \n",
     "            optimizer=self.params.optimizer_fn(learning_rate=self.lr_placeholder)\n",
     "            self.grads_and_vars=optimizer.compute_gradients(loss=self.loss,var_list=self.model_trainable_variables)\n",
@@ -111,7 +107,7 @@
     "        \n",
     "       \n",
     "     \n",
-    "        def train(self,sess,episodes,steps,epsilon,env,save_dir,save_every_n_iter,log_every_n_iter,initialize=False,set_logging=True):\n",
+    "        def train(self,sess,episodes,steps,epsilon,batch_size,env,save_dir,save_every_n_iter,log_every_n_iter,initialize=False,set_logging=True):\n",
     "            if initialize:\n",
     "                sess.run([self.initializer])\n",
     "            if set_logging:\n",
@@ -131,22 +127,41 @@
     "                        action=np.random.randint(low=0,high=self.params.num_outputs,size=1,dtype=np.int32)\n",
     "                    else:\n",
     "                        feed_dict={self.X:np.expand_dims(state,axis=0),self.lr_placeholder:self.params.learning_rate,self.training_mode:True}\n",
-    "                        action=sess.run([self.max_q_value_actions_one_hot],feed_dict=feed_dict)\n",
+    "                        action=sess.run([self.max_q_value_actions],feed_dict=feed_dict)\n",
+    "                        action=action[0]\n",
+    "                        \n",
     "                    next_state,reward,done,info=env.step(action)\n",
     "                    \n",
     "                    if done:\n",
-    "                        next_state=None\n",
+    "                        next_state=np.nan\n",
     "                        self.add_to_experience_replay(state,action,next_state,reward)\n",
     "                        break\n",
     "                    else:\n",
     "                        self.add_to_experience_replay(state,action,next_state,reward)\n",
     "                        state=next_state\n",
+    "                        \n",
+    "                    #performing training step\n",
+    "                    states,actions,next_states,rewards=self.experience_replay_buffer.get_batch(batch_size=batch_size)\n",
+    "                    \n",
+    "                    #finding where the next states are nans (episode ended)\n",
+    "                    nan_inds=np.isnan(next_states)\n",
+    "#                     filetered_next_states=next_states[np.logical_not(nan_inds)]\n",
+    "                    next_states[nan_inds]=np.zeros(shape=self.params.input_shape[1:],dtype=np.float32)\n",
+    "                    \n",
+    "                    #finding vals of next states\n",
+    "                    feed_dict={self.X:next_states,self.lr_placeholder:self.params.learning_rate,self.training_mode:True}\n",
+    "                    max_q_vals_next_state=sess.run([self.max_q_values],feed_dict=feed_dict)\n",
+    "                    max_q_vals_next_state[nan_inds]=0\n",
+    "                    \n",
+    "                    #calculating loss and running train op\n",
+    "                    feed_dict={self.X:states,self.actions:actions,self.max_q_values_next_state:max_q_values_next_state,self.rewards:rewards,self.lr_placeholder:self.params.learning_rate,self.training_mode:True}\n",
+    "                    loss,_=sess.run([self.loss,self.train_op],feed_dict=feed_dict)\n",
     "#             "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +201,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(?, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# self,max_experience_buffer_len=120,param_dict={},restore_params=False,pickle_file_path=\"\"\n",
     "tf.reset_default_graph()\n",
-    "model=Q_Network(params)\n",
+    "model=Q_Network(120,params)\n",
     "model.Build_model()"
    ]
   }
