changed location os saver op

--- a/model.ipynb
+++ b/model.ipynb
@@ -131,7 +131,7 @@
     "            self.logits=tf.layers.dense(inputs,self.params.num_outputs,activation=None,kernel_initializer=self.params.initializer_fn())\n",
     "            \n",
     "            self.model_variables=tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES, scope=self.params.name_scope)#saving only the varuiables belonging to this scope\n",
-    "            self.saver=tf.train.Saver(var_list=self.model_variables)\n",
+    "#             self.saver=tf.train.Saver(var_list=self.model_variables)\n",
     "            self.increment_epoch_op=tf.assign(self.epoch_no, self.epoch_no+1)#op to update number of epoch by + 1\n",
     "            self.model_trainable_variables=tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=self.params.name_scope)\n",
     "\n",
@@ -151,7 +151,7 @@
     "            self.train_op=optimizer.apply_gradients(grads_and_vars=self.grads_and_vars,global_step=self.step_no)\n",
     "#             self.train_op=optimizer.minimize(loss = self.loss,global_step=self.step_no)\n",
     "\n",
-    "\n",
+    "            self.saver=tf.train.Saver(var_list=self.model_variables)\n",
     "            #summary ops\n",
     "            loss_summary=tf.summary.scalar(\"loss\",self.loss)\n",
     "            acc_summary=tf.summary.scalar(\"accuracy\",self.accuracy)\n",
