--- a/policy_network.ipynb
+++ b/policy_network.ipynb
@@ -65,7 +65,8 @@
     "            \n",
     "#             #taking grad step based on the values of grads received \n",
     "            self.train_op=optimizer.apply_gradients(grads_and_vars=self.grads_and_vars_feed,global_step=self.step_no)\n",
-    "            \n",
+    "            self.saver=tf.train.Saver(var_list=self.model_variables)\n",
+    "\n",
     "            self.initializer=tf.global_variables_initializer()"
    ]
   },
