returning stack of consecutive frames instead of single frame

--- a/Env.ipynb
+++ b/Env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Env:\n",
-    "    def __init__(self,env_name,convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None,normalize=True):\n",
+    "    def __init__(self,env_name,convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None,normalize=True,num_of_frames_per_stack=1):\n",
     "        \n",
     "        self.steps=0\n",
     "        self.env_name=env_name\n",
@@ -32,49 +32,56 @@
     "        self.resize_X=resize_X\n",
     "        self.normalize=normalize\n",
     "        self.action_space=self.env.action_space.n\n",
-    "    \n",
+    "        \n",
+    "        self.num_of_frames_per_stack=num_of_frames_per_stack\n",
+    "        self.frame_stack=None\n",
     "        \n",
     "        self.done=False\n",
     "        self.image_shape=self.reset().shape\n",
     "        self.done=True\n",
-    "    def preprocess(self,state):\n",
+    "    def preprocess(self,frame):\n",
     "        if self.convert_to_grayscale:\n",
-    "            state=cv2.cvtColor(state, cv2.COLOR_BGR2GRAY)\n",
+    "            frame=cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "            \n",
     "#         state=state[40:-10,10:]\n",
     "        if self.crop:\n",
-    "            state=state[self.valid_Y[0]:self.valid_Y[1],self.valid_X[0]:self.valid_X[1]]\n",
+    "            frame=frame[self.valid_Y[0]:self.valid_Y[1],self.valid_X[0]:self.valid_X[1]]\n",
     "        \n",
     "        if self.resize:\n",
-    "            state=cv2.resize(state,(self.resize_X,self.resize_Y))\n",
+    "            frame=cv2.resize(frame,(self.resize_X,self.resize_Y))\n",
     "            \n",
     "        if self.normalize:\n",
-    "            state=state/255.0\n",
+    "            frame=frame/255.0\n",
     "            \n",
-    "        state=np.expand_dims(state,axis=-1)\n",
+    "#         state=np.expand_dims(state,axis=-1)\n",
     "#         print (state.shape)\n",
-    "        return state\n",
+    "        return frame\n",
     "    \n",
     "    def reset(self):\n",
     "        print (\"Resetting Environment...\\n\")\n",
-    "        state=self.env.reset()\n",
-    "        state=self.preprocess(state)\n",
+    "        frame=self.env.reset()\n",
+    "        frame=self.preprocess(frame)\n",
     "        self.steps=0\n",
     "        self.done=False\n",
-    "        return state       \n",
+    "        \n",
+    "        self.frame_stack=np.stack((frame  for i in np.arange(self.num_of_frames_per_stack)),axis=2)\n",
+    "        return self.frame_stack       \n",
     "    \n",
     "    def step(self,action):\n",
     "        if not self.done:\n",
-    "            next_state,reward,self.done,info=self.env.step(action)\n",
-    "            next_state=self.preprocess(next_state)\n",
+    "            next_frame,reward,self.done,info=self.env.step(action)\n",
+    "            next_frame=self.preprocess(next_frame)\n",
     "            self.steps+=1\n",
     "#             print('stepping')\n",
     "#             cv2.imshow(\"Over the Clouds - gray\", next_state)\n",
     "#             cv2.waitKey(0)\n",
-    "            return next_state,reward,self.done,info\n",
+    "            next_frame=np.expand_dims(next_frame,axis=-1)\n",
+    "            self.frame_stack=np.append(next_frame,self.frame_stack[:,:,:-1],axis=-1)\n",
+    "            return self.frame_stack,reward,self.done,info\n",
     "        else:\n",
     "            print (\"episode finished.Try Resetting the environment.Returning null values\\n\")\n",
     "            return None,None,None,None\n",
+    "        \n",
     "    def render(self):\n",
     "#         cv2.imshow(\"Over the Clouds - gray\", gray_image)\n",
     "        self.env.render()\n",
@@ -87,15 +94,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(180, 140, 1)\n",
-      "Discrete(6)\n"
+      "Resetting Environment...\n",
+      "\n",
+      "(180, 140, 4)\n",
+      "6\n",
+      "6\n",
+      "Resetting Environment...\n",
+      "\n",
+      "img shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n",
+      "next_stack shape=(180, 140, 4)\n"
      ]
     },
     {
@@ -105,30 +130,21 @@
       "c:\\users\\armughan.shahid\\gym\\gym\\__init__.py:22: UserWarning: DEPRECATION WARNING: to improve load times, gym no longer automatically loads gym.spaces. Please run \"import gym.spaces\" to load gym.spaces on your own. This warning will turn into an error in a future version of gym.\n",
       "  warnings.warn('DEPRECATION WARNING: to improve load times, gym no longer automatically loads gym.spaces. Please run \"import gym.spaces\" to load gym.spaces on your own. This warning will turn into an error in a future version of gym.')\n"
      ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "int() argument must be a string, a bytes-like object or a number, not 'Discrete'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-3f0c5f2ff943>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0ma_nums\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_nums\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'Discrete'"
-     ]
     }
    ],
    "source": [
-    "# # convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None\n",
-    "# env=Env('SpaceInvaders-v0',convert_to_grayscale=True,crop=True,valid_Y=[20,-10],valid_X=[10,-10],resize=False,resize_Y=140,resize_X=100)\n",
+    "# # # convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None\n",
+    "# env=Env('SpaceInvaders-v0',convert_to_grayscale=True,crop=True,valid_Y=[20,-10],valid_X=[10,-10],resize=False,resize_Y=140,resize_X=100,normalize=True,num_of_frames_per_stack=4)\n",
     "# print (env.image_shape)\n",
     "# print (env.action_space)\n",
     "# a_nums=env.action_space\n",
     "# print (int(a_nums))\n",
     "# img=env.reset()\n",
-    "# for i in np.arange(100):\n",
-    "#     env.render()\n",
+    "# print(\"img shape={}\".format(img.shape))\n",
+    "# for i in np.arange(10):\n",
+    "# #     env.render()\n",
     "#     ns,r,d,i=env.step(2)\n",
+    "#     print('next_stack shape={}'.format(ns.shape))\n",
     "#     if d:\n",
     "#         env.reset()\n",
     "# env.close()\n",
@@ -138,10 +154,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "[[ 6  7]\n",
+      " [ 8  9]\n",
+      " [10 11]]\n",
+      "[[12 13]\n",
+      " [14 15]\n",
+      " [16 17]]\n",
+      "[[[ 0  6]\n",
+      "  [ 1  7]]\n",
+      "\n",
+      " [[ 2  8]\n",
+      "  [ 3  9]]\n",
+      "\n",
+      " [[ 4 10]\n",
+      "  [ 5 11]]]\n",
+      "[[[ 0  6 12]\n",
+      "  [ 1  7 13]]\n",
+      "\n",
+      " [[ 2  8 14]\n",
+      "  [ 3  9 15]]\n",
+      "\n",
+      " [[ 4 10 16]\n",
+      "  [ 5 11 17]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# d=deque()\n",
+    "# a=np.arange(6).reshape(3,2)\n",
+    "# b=np.arange(6,12).reshape(3,2)\n",
+    "# c=np.arange(12,18).reshape(3,2)\n",
+    "# print(a)\n",
+    "# print(b)\n",
+    "# print(c)\n",
+    "# d=np.stack((a,b),axis=2)\n",
+    "# print(d)\n",
+    "# e=np.append(d,np.expand_dims(c,axis=-1),axis=2)\n",
+    "# print (e)"
+   ]
   }
  ],
  "metadata": {
