added loop to repeat action

--- a/Env.ipynb
+++ b/Env.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "class Env:\n",
-    "    def __init__(self,env_name,convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None,normalize=True,num_of_frames_per_stack=1):\n",
+    "    def __init__(self,env_name,convert_to_grayscale=True,crop=True,valid_Y=[0,-1],valid_X=[0,-1],resize=False,resize_Y=None,resize_X=None,normalize=True,num_of_frames_per_stack=1,repeat_action=4):\n",
     "        \n",
     "        self.steps=0\n",
     "        self.env_name=env_name\n",
@@ -31,7 +31,9 @@
     "        self.resize_Y=resize_Y\n",
     "        self.resize_X=resize_X\n",
     "        self.normalize=normalize\n",
+    "        self.repeat_action=repeat_action\n",
     "        self.action_space=self.env.action_space.n\n",
+    "        \n",
     "        \n",
     "        self.num_of_frames_per_stack=num_of_frames_per_stack\n",
     "        self.frame_stack=None\n",
@@ -69,7 +71,10 @@
     "    \n",
     "    def step(self,action):\n",
     "        if not self.done:\n",
-    "            next_frame,reward,self.done,info=self.env.step(action)\n",
+    "            for i in np.arange(self.repeat_action):\n",
+    "                next_frame,reward,self.done,info=self.env.step(action)\n",
+    "                if self.done:\n",
+    "                    break\n",
     "            next_frame=self.preprocess(next_frame)\n",
     "            self.steps+=1\n",
     "#             print('stepping')\n",
